# redakt

./: .gitignore  README.md  RELEASE.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
redakt/: __init__.py  cli.py  ner.py  redactor.py  rules.py
redakt/management/: __init__.py  rules_store.py
redakt/management/dashboard/: __init__.py  server.py
redakt/management/dashboard/static/: index.html
tests/: test_cli.py  test_dashboard_server.py  test_ner.py  test_redactor.py  test_rules_store.py
