[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "redakt"
version = "0.1.2rc4"
description = "PII detection and redaction for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.135.3,<1",
    "uvicorn>=0.44.0,<1",
]
ner = [
    "presidio-analyzer>=2.2.362,<3",
    "presidio-anonymizer>=2.2.362,<3",
    "spacy>=3.8.14,<4",
]
all = [
    "fastapi>=0.135.3,<1",
    "presidio-analyzer>=2.2.362,<3",
    "presidio-anonymizer>=2.2.362,<3",
    "spacy>=3.8.14,<4",
    "uvicorn>=0.44.0,<1",
]

[project.scripts]
redakt = "redakt.cli:main"

[dependency-groups]
dev = [
    "fastapi>=0.135.3,<1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.44.0,<1",
]

[tool.setuptools.packages.find]
include = ["redakt*"]

[tool.setuptools.package-data]
"redakt.management.dashboard" = ["static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["."]
